UserControllerTest refactoring